css/style.css
body {
  scroll-behavior: smooth;
  margin: 0%;
  padding: 0%;
  background-color: rgba(227 186 253 0.15);
  height: 100vh;
  color: white;
}

.navigation {
  display: grid;
  width: 100%;
  grid-template-columns: 1.5fr 1fr 0fr;
  margin: auto;
  justify-content: space-between;
  align-items: center;
  background-color: rgb(3 3 255 / 27%);
}

#navbar {
  display: flex;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

.navlist ul {
  padding: 0%;
  list-style: none;
}

.navlist ul a {
  margin: auto 0.25rem;
  text-decoration: none;
  color: white;
  padding: 0.5rem 1.5rem;
  border-radius: 2rem;
  font-weight: bold;
}

.navlist ul a:hover {
  background-color: #fff8e4;
  color: blue;
}

.logo img {
  border-radius: 50%;
  margin: 0.3rem;
  width: 3rem;
}

#footer {
  display: flex;
  width: 100vw;
  justify-content: center;
  position: relative;
  bottom: 0%;
  background-color: black;
  padding: 0.3rem 0px;
}

#webname h1 {
  font-family: "Irish Grover", cursive;
  font-size: 3rem;
  margin: 0px auto;
}

#discription {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  color: rgb(0, 0, 15);
  display: flex;
  flex-direction: column;
  margin: auto 5rem;
}

.para img {
  display: block;
  margin: 5rem auto;
  margin-bottom: 10rem;
  width: 65%;
}

.para{
  text-align: justify;
}

h1 {
  text-align: left;
  font-size: 3rem;
  color: rgb(160 60 140);
}

